# gltf-viewer

./: CMakeLists.txt  vcpkg.json
data/: envmap.cbmp  imgui.ini  irradiance.cbmp  prefilter.cbmp
data/Shaders/: brdfLUT.frag  convolute.frag  cubedepth.frag  cubedepth.geom  default.frag  default.vert  default2.frag  default2.vert  depth.vert  fullscreen.vert  highlight.frag  morph.vert  perspectiveDepthMapVisualizer.frag  prefilter.frag  shadowMapVisualizer.frag  skybox.frag  transform.vert  worldspace.vert
include/glad/: glad.h
src/: Animation.cpp  Animation.h  BBox.h  Camera.h  Entity.h  GLTFHelpers.cpp  GLTFHelpers.h  GLTFResources.cpp  GLTFResources.h  Input.h  Light.h  Main.cpp  Mesh.cpp  Mesh.h  PBRMaterial.cpp  PBRMaterial.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Skeleton.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexAttribute.h  glad.cpp  tiny_gltf.cpp
